--- a/LaboratorioNo6/app/src/main/AndroidManifest.xml
+++ b/LaboratorioNo6/app/src/main/AndroidManifest.xml
@@ -12,17 +12,25 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.LaboratorioNo6"
         tools:targetApi="31">
+
+        <!-- Declaración de SplashActivity -->
+        <activity
+            android:name=".ui.theme.SplashActivity"
+            android:exported="true"
+            android:theme="@style/Theme.LaboratorioNo6">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+
+        <!-- Declaración de MainActivity -->
         <activity
             android:name=".MainActivity"
             android:exported="true"
             android:label="@string/app_name"
-            android:theme="@style/Theme.LaboratorioNo6">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
+            android:theme="@style/Theme.LaboratorioNo6" />
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
     </application>
 
 </manifest>
