--- a/LaboratorioNo6/app/src/main/AndroidManifest.xml
+++ b/LaboratorioNo6/app/src/main/AndroidManifest.xml
@@ -1,19 +1,13 @@
-<?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
     <application
         android:allowBackup="true"
-        android:dataExtractionRules="@xml/data_extraction_rules"
-        android:fullBackupContent="@xml/backup_rules"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
-        android:supportsRtl="true"
-        android:theme="@style/Theme.LaboratorioNo6"
-        tools:targetApi="31">
+        android:theme="@style/Theme.LaboratorioNo6">
 
-        <!-- Declaración de SplashActivity -->
+        <!-- SplashActivity será la pantalla principal al iniciar la app -->
         <activity
             android:name=".ui.theme.SplashActivity"
             android:exported="true"
@@ -24,13 +18,10 @@
             </intent-filter>
         </activity>
 
-        <!-- Declaración de MainActivity -->
+        <!-- MainActivity mostrará las recetas después de la SplashScreen -->
         <activity
             android:name=".MainActivity"
             android:exported="true"
-            android:label="@string/app_name"
             android:theme="@style/Theme.LaboratorioNo6" />
-
     </application>
-
 </manifest>
